--- a/README.org
+++ b/README.org
@@ -76,6 +76,9 @@ its content.
 
 ** Julio 2025
 
+*** 30-Jul-25
++ [[https://www.isa-afp.org/entries/Diophantine_Universal_Pairs.html][Universal pairs for diophantine equations (in Isabelle/HOL)]]. ~ Marco David et als. #ITP #ProofAssistant #IsabelleHOL #Math
+
 *** 29-Jul-25
 + [[https://electriclam.com/papers/conf.pdf][Algorithmic conversion with surjective pairing: A syntactic and untyped approach]]. ~ Yiyun Liu, Stephanie Weirich. #FormalVerification #ProofAssistants #CoqProver
 + [[https://openreview.net/forum?id=CBFAMnax09][Symbolic world models in Lean 4 for reinforcement learning]]. ~ Matěj Kripner. #ITP #LeanProver #MachineLearning
